# great-expectations

./: .gitignore  .pre-commit-config.yaml  README.md  basic_usage.py  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: transportadora.yml
great_expectations/expectations/: .ge_store_backend_id  titanic_expectation_suite.json
great_expectations/expectations/transportadora/: clientes_expectation_suite.json  pedidos_expectation_suite.json
